[package]
name = "bactrees"
version = "0.1.0"
edition = "2021"
crate-type = ["staticlib"]

[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
needletail = "0.5.1"
nalgebra = "0.32.3"
clap = { version = "4.5", features = ["derive"]}
cxx = "1.0"
regex = "1.10"

[dev-dependencies]
# testing
regex = "1.10"
snapbox = "0.4"
predicates = "2.1"
assert_fs = "1.0"
pretty_assertions = "1.3"
float-cmp = "0.9"

[build-dependencies]
# linked cpp code
cxx-build = "1.0"

[profile.release]
debug = 1
